password reset added

--- a/public/assets/backend/css/custom.css
+++ b/public/assets/backend/css/custom.css
@@ -13,3 +13,11 @@
 .user-header {
     background-color: oklch(0.869 0.022 252.894);
 }
+
+.sidebar-menu .nav-link {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.sidebar-menu .nav-link.active {
+    background-color: #415a77 !important;
+}
